# skill-perf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design-principles.md  development.md  thresholds.md
examples/: test-suite.json
examples/sample-skill/: SKILL.md
examples/sample-skill/references/: data-formats.md
examples/sample-skill/scripts/: process_csv.py
skill/: SKILL.md
skill/references/: cli-reference.md  fix-guidelines.md  waste-patterns.md
skill/references/patterns/: cat-on-large-file.md  duplicate-reads.md  excessive-exploration.md  high-think-ratio.md  large-file-read.md  low-cache-rate.md  oversized-skill.md  script-not-executed.md  skill-not-triggered.md
src/skill_perf/: __init__.py  cli.py
src/skill_perf/capture/: __init__.py  proxy.py  runner.py  suite.py
src/skill_perf/commands/: __init__.py  create.py  diagnose.py  estimate.py  init.py  measure.py  snapshot.py  suggest.py  verify.py
src/skill_perf/core/: __init__.py  config.py  pricing.py  tokenizer.py
src/skill_perf/diagnosis/: __init__.py  engine.py  patterns.py
src/skill_perf/models/: __init__.py  benchmark.py  comparison.py  diagnosis.py  session.py  step.py  treemap.py
src/skill_perf/parser/: __init__.py  classifier.py  (+4 more)
tests/: test_capture.py  test_create.py  test_diagnosis.py  test_estimate.py  test_measure_summary.py  test_models.py  test_parser.py  test_pricing.py  test_report.py  test_snapshot.py  test_suggestion.py  test_tokenizer.py  test_verify.py
tests/fixtures/: test-suite.json
(+20 files in other folders)
